--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,29 +14,29 @@ server {
 }
 
 
+# TODO: proxy to django client
+#server {
 
-server {
+#  listen 443 ssl;
+#  listen [::]:443 ssl;
+#
+#  server_name cube-hackaton.ru;
 
-  listen 443 ssl;
-  listen [::]:443 ssl;
+#  ssl_certificate /etc/letsencrypt/live/cube-hackaton.ru/fullchain.pem;
+#  ssl_certificate_key /etc/letsencrypt/live/cube-hackaton.ru/privkey.pem;
 
-  server_name cube-hackaton.ru;
+#  location / {
+#    root   /usr/share/nginx/html;
+#    index  index.html index.htm;
+#    try_files $uri $uri/ /index.html;
+#  }
 
-  ssl_certificate /etc/letsencrypt/live/cube-hackaton.ru/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/cube-hackaton.ru/privkey.pem;
+#  error_page   500 502 503 504  /50x.html;
 
-  location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-    try_files $uri $uri/ /index.html;
-  }
-
-  error_page   500 502 503 504  /50x.html;
-
-  location = /50x.html {
-    root   /usr/share/nginx/html;
-  }
-}
+#  location = /50x.html {
+#    root   /usr/share/nginx/html;
+#  }
+#}
 
 
 server {
