--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,7 +19,7 @@ server {
   listen 443 ssl;
   listen [::]:443 ssl;
 
-  server_name auth.cube-hackaton.ru;
+  server_name cube-hackaton.ru;
 
   ssl_certificate /etc/letsencrypt/live/cube-hackaton.ru/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/cube-hackaton.ru/privkey.pem;
